--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: clojure
-lein: lein2
-script: lein2 do clean, compile, test
+lein: lein
+script: lein do clean, compile, test
 jdk:
   - openjdk7
   - oraclejdk7
